samples/_failures_safe/1761593507_566400_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ff26eec.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_9ff26eec.c:136:9: error: expected expression at end of input
  136 |         if (strcmp(
      |         ^~
./samples/SAFE/__tmp_9ff26eec.c:136:13: error: too few arguments to function ‘strcmp’
  136 |         if (strcmp(
      |             ^~~~~~
In file included from ./samples/SAFE/__tmp_9ff26eec.c:4:
/usr/include/string.h:156:12: note: declared here
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
./samples/SAFE/__tmp_9ff26eec.c:136:9: error: expected declaration or statement at end of input
  136 |         if (strcmp(
      |         ^~
./samples/SAFE/__tmp_9ff26eec.c:136:9: error: expected declaration or statement at end of input
